--- a/config/database.yml
+++ b/config/database.yml
@@ -6,3 +6,13 @@ development:
   pool: 5
   username: postgres
   password: root
+  
+production:
+  adapter: mysql2
+  database: LevelUpRubyOrder
+  host: 50.63.227.96
+  username: LevelUpRubyOrder
+  password: Ruby#2K13
+  pool: 5
+  timeout: 5000
+  template: template0
